[Translation] Compare and correct language files --continue

--- a/cdx_core/config/locales/views/defaults.en.yml
+++ b/cdx_core/config/locales/views/defaults.en.yml
@@ -5,6 +5,6 @@ en:
     save: 'Save'
     say_yes: 'Yes'
     say_no: 'No'
-    vi: 'Vietnamese'
+    vi: 'Tiếng Việt'
     en: 'English'
     are_you_sure: 'Are you sure?'
