--- a/cdx_vietnam/config/locales/views/episodes.vi.yml
+++ b/cdx_vietnam/config/locales/views/episodes.vi.yml
@@ -3,9 +3,11 @@ vi:
     form:
       header: 'Tập cho %{patient_name}'
       history: 'Lịch sử điều trị trước đây'
+    history_tb: 'Previous history of TB'
       select_type_of_episode: 'Chọn loại tập'
       episode_details: 'Thông tin tập'
       episode_type_not_available: 'Loại tập này hiện không có có sẵn'
+    hiv_status: 'Trạng thái HIV hiện tại'
     create:
       new_episode: 'Tập mới đã được tạo'
       episode_created: 'Tập đã được tạo thành công.'
