--- a/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
@@ -2,6 +2,7 @@ vi:
   activerecord:
     attributes:
       dst_lpa_result:
+        result_status: 'Trạng thái'
         sample_collected_on: 'Ngày lấy mẫu'
         media_used: 'Phương thức'
         serial_number: 'Số seri phòng thí nghiệm'
