--- a/cdx_vietnam/config/locales/views/encounters.vi.yml
+++ b/cdx_vietnam/config/locales/views/encounters.vi.yml
@@ -15,7 +15,10 @@ vi:
       error: 'Lỗi %{action_name} %{class_name}'
     edit:
       test_order: 'Yêu cầu xét nghiệm'
-    new_tests: 'xét nghiệm mới'
+    update:
+      status_tracking: 'Trạng thái của yêu cầu xét nghiệm đã cập nhật'
+    new_index:
+      new_tests: 'Xét nghiệm mới'
       select_option: 'Hãy chọn một trong những tùy chọn bên dưới.'
       new_test_order: 'xét nghiệm mới'
       order_diagnostic_test: 'Yêu cầu xét nghiệm đối với bệnh nhân và mẫu. Chỉ định loại mẫu, loại xét nghiệm, lý do kiểm tra và ngày hết hạn. Thêm mã mẫu hoặc dùng bộ tạo mã mẫu.'
