--- a/cdx_vietnam/config/locales/views/js_components.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_components.vi.yml
@@ -7,8 +7,14 @@
     cancel: 'Hủy bỏ'
     test_result_actions:
       update_failed: 'Không thể cập nhật trạng thái'
+    test_order_actions:
+      update_failed: 'Không thể cập nhật yêu cầu xét nghiệm.'
     test_result_status:
-      sample_received:
+      approve_payment:
+        action_label: 'Tài trợ đã được phê duyệt'
+        reject_label: 'Tài trợ đã bị từ chối'
+        reject_header: 'Vui lòng giải thích tại sao hóa đơn này bị từ chối'
+      allocated:
         action_label: 'Tiếp nhận mẫu'
         reject_label: 'Từ chối mẫu'
         reject_header: 'Vui lòng giải thích tại sao mẫu này bị từ chối'
@@ -18,7 +24,7 @@
         reject_header: 'Bình luận'
       in_progress:
         action_label: 'Chấp thuận mẫu'
-        reject_label: 'Từ chố mẫu'
+        reject_label: 'Từ chối mẫu'
         reject_header: 'Vui lòng giải thích tại sao mẫu này bị từ chối'
       test_received:
         action_label: 'Chấp thuận xét nghiệm'
@@ -27,8 +33,17 @@
       test_completed: 'Xét nghiệm hoàn tất'
       test_new:  'Xét nghiệm mới'
       test_rejected: 'Xét nghiệm từ chối'
+      show_test_result: 'Hiện kết quả'
+    patient_results:
+      new: 'Mới'
+      sample_collected: 'Đang chờ'
+      allocated: 'Đã tiếp nhận'
+      pending_approval: 'Đang chờ phê duyệt'
+      rejected: 'Đã từ chối'
+      completed: 'Đã hoàn thành'
     payment_action:
       mark_as_paid: 'Đánh giá yêu cầu xét nghiệm được trả'
+      reject: 'Tài trợ đã bị từ chối'
     add_samples_action:
       add_result: 'Thêm kết quả'
       submit_samples:  'Nhập mẫu'
@@ -38,6 +53,7 @@
       type: 'Loại'
       sample_id: 'Mã mẫu'
       examined_by: 'Kiểm tra bởi'
+      status: 'Trạng thái'
       options: 'Tùy chọn'
     alert_groups:
       col_name: "Tên cảnh báo"
@@ -66,6 +82,8 @@
     test_order:
       new: 'Mới'
       pending: 'Chưa giải quyết'
+      financed: 'Được tài trợ'
+      not_financed: 'Không được tài trợ'
       samples_collected: 'Các mẫu thu thập'
       samples_received: 'Các mẫu đã nhận'
       recieved: 'Đã nhận'
@@ -92,6 +110,7 @@
       col_site: "Trang"
 
     encounters:
+      btn_comment: 'Nhận xét'
       btn_save: "Lưu mã phòng thí nghiệm"
       lbl_tests_requested: "Những kiểm tra được yêu cầu"
       lbl_microscopy: "Kính hiển vi"
@@ -148,6 +167,7 @@
         col_request_by: "Yêu cầu bởi"
         col_request_to: "Yêu cầu cho"
         col_order_id: "Mã yêu cầu"
+        col_batch_id: "Mã loạt"
         col_order_by: "Yêu cầu bởi"
         col_request_date: "Ngày yêu cầu"
         col_due_date: "Ngày hết hạn"
@@ -207,16 +227,16 @@
       tooltip_user: "Số lượng người dùng có vai trò này."
 
     test_orders:
-      col_sample_id: "Mã mẫu thử"
       col_status: "Trạng thái"
       col_request_by: "Yêu cầu bởi"
       col_request_to: "Yêu cầu cho"
       col_testing_for: "Kiểm tra cho"
       col_order_by: "Yêu cầu bởi"
       col_request_date: "Ngày yêu cầu"
+      col_tests_requiring_approval: "Xét nghiệm cần phê duyệt"
       col_due_date: "Ngày hết hạn"
       col_id: "Mã yêu cầu"
-
+      col_sample_id: "Mã mẫu thử"
 
     test_results:
       col_sample: "Mẫu được thu thập ngày"
