--- a/cdx_vietnam/config/locales/views/patient_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/patient_results.vi.yml
@@ -6,5 +6,6 @@ vi:
       samples_updated: 'Mẫu thử đã được cập nhật thành công.'
       updated_fail: 'Mẫu thử không được cập nhật.'
     update:
+      status_tracking: 'Trạng thái của kết quả xét nghiệm đã được cập nhật'
       success: 'Kết quả đã được cập nhật thành công.'
       failure: 'Kết quả không được cập nhật.'
