2406 New sample id selector.

--- a/cdx_core/config/locales/models/culture_result.en.yml
+++ b/cdx_core/config/locales/models/culture_result.en.yml
@@ -8,3 +8,4 @@ en:
         result_on: 'Date of result'
         media_used: 'Media used'
         serial_number: 'Laboratory serial number(s)'
+        sample_identifier_id: 'Sample ID'
