--- a/cdx_core/config/locales/models/dst_lpa_result.en.yml
+++ b/cdx_core/config/locales/models/dst_lpa_result.en.yml
@@ -20,3 +20,4 @@ en:
         results_other4: 'Result Other'
         examined_by: 'Examined by'
         result_on: 'Date of result'
+        sample_identifier_id: 'Sample ID'
