--- a/cdx_core/config/locales/models/xpert_result.en.yml
+++ b/cdx_core/config/locales/models/xpert_result.en.yml
@@ -9,3 +9,4 @@ en:
         rifampicin: 'Rifampicin resistance'
         trace: 'Trace'
         tuberculosis: 'M. Tuberculosis Detection Volume'
+        sample_identifier_id: 'Sample ID'
