--- a/cdx_core/config/locales/models/microscopy_result.en.yml
+++ b/cdx_core/config/locales/models/microscopy_result.en.yml
@@ -10,3 +10,4 @@ en:
         serial_number: 'Laboratory serial number(s)'
         appearance: 'Visual appearance'
         test_result: 'Result'
+        sample_identifier_id: 'Sample ID'
