--- a/cdx_vietnam/config/locales/views/js_screen_views.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_screen_views.vi.yml
@@ -211,7 +211,9 @@ vi:
       alert_testing_for: "Vui lòng chọn một loại xét nghiệm"
       alert_exam_reason: "Vui lòng chọn một Examination Reason."
       alert_tests_requested: "Vui lòng chọn một hoặc nhiều loại xét nghiệm"
-      alert_add_samples: "Vui lòng thêm một hoặc nhiều mẫu thử."
+      alert_add_samples: "Vui lòng thêm một hoặc nhiều mẫu thử."      
+      alert_col_sample_type: "Please select a Collection Sample Type"
+      alert_othercomment: "Please specify Collection Sample Type"      
       test_order_details_heading: "Chi tiết xét nghiệm"
       testing_for_label: "xét nghiệm cho"
       TB_option: "Lao"
