--- a/cdx_core/config/locales/models/dst_lpa_result.en.yml
+++ b/cdx_core/config/locales/models/dst_lpa_result.en.yml
@@ -21,3 +21,4 @@ en:
         examined_by: 'Examined by'
         result_on: 'Date of result'
         sample_identifier_id: 'Sample ID'
+        feedback_message_id: 'Feedback message'
