--- a/cdx_core/config/locales/models/microscopy_result.en.yml
+++ b/cdx_core/config/locales/models/microscopy_result.en.yml
@@ -11,3 +11,4 @@ en:
         appearance: 'Visual appearance'
         test_result: 'Result'
         sample_identifier_id: 'Sample ID'
+        feedback_message_id: 'Feedback message'
