--- a/cdx_core/config/locales/models/xpert_result.en.yml
+++ b/cdx_core/config/locales/models/xpert_result.en.yml
@@ -10,3 +10,4 @@ en:
         trace: 'Trace'
         tuberculosis: 'M. Tuberculosis Detection Volume'
         sample_identifier_id: 'Sample ID'
+        feedback_message_id: 'Feedback message'
