--- a/cdx_vietnam/config/locales/select.en.yml
+++ b/cdx_vietnam/config/locales/select.en.yml
@@ -44,10 +44,10 @@ en:
         saliva: 'Saliva'
       test_result_options:
         negative: 'Negative'
-        1to9: 'Results 1-9/100 HPF'
-        1plus: 'Results +'
-        2plus: 'Results ++'
-        3plus: 'Results +++'
+        1to9: 'Scanty'
+        1plus: '1+'
+        2plus: '2+'
+        3plus: '3+'
     culture:
       media_options:
         liquid: 'Liquid'
@@ -103,7 +103,13 @@ en:
         unknown: 'Unknown Previously'
         relapsed: 'Relapsed Treatment Aft.'
         loss: 'Loss to follow-up'
-        other: 'Other previous treatments'
+        other: 'Other previous treatments'        
+        failcati: 'Failed Cat I'
+        failcatii: 'Failed Cat II'
+        noncon: 'Non-converters after 2 or 3 months of Cat I or Cat II treatment'
+        relepsecat: 'Relapse of Cat I or/and Cat II'
+        retreatcat: 'Retreatment after lost to follow up of Cat I or/and Cat II'
+        tbmdr: 'TB cases or TB suspects who have contacts with MDR-TB index cases'
       treatment_outcome:
         cured: 'Cured'
         completed: 'Treatment completed'
