--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -44,10 +44,10 @@ en:
         saliva: 'Saliva'
       test_result_options:
         negative: 'Negative'
-        1to9: 'Results 1-9/100 HPF'
-        1plus: 'Results +'
-        2plus: 'Results ++'
-        3plus: 'Results +++'
+        1to9: 'Scanty'
+        1plus: '1+'
+        2plus: '2+'
+        3plus: '3+'
     culture:
       media_options:
         liquid: 'Liquid'
