[FIX] Translation on invitation email

--- a/cdx_core/config/locales/views/invitation_mailer.en.yml
+++ b/cdx_core/config/locales/views/invitation_mailer.en.yml
@@ -5,3 +5,4 @@ en:
       complete_sign_up: 'Please follow the instructions to complete the signup.'
       create_acc: 'Create account'
       footer: 'If the link above is not working then paste this URL into your browser:'
+      subject: "Invitation to Connected Diagnostics"
