--- a/cdx_vietnam/config/locales/views/invitation_mailer.vi.yml
+++ b/cdx_vietnam/config/locales/views/invitation_mailer.vi.yml
@@ -5,3 +5,4 @@ vi:
       complete_sign_up: 'Hãy làm theo hướng dẫn để hoàn tất việc đăng ký.'
       create_acc: 'Tạo tài khoản'
       footer: 'Nếu liên kết trên không hoạt động thì dán URL này vào trình duyệt:'
+      subject: "Thư mời vào hệ thống Connected Diagnostics"
