[Integration] Admin log, API Client, eTB scraper

--- a/cdx_vietnam/config/locales/views/js_components.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_components.vi.yml
@@ -276,3 +276,15 @@
       col_role: "Chức vụ"
       col_status: "Trạng thái"
       col_last_activity: "Hoạt động cuối cùng"
+    integration_logs:
+      col_title: "Lịch sử tích hợp"
+      col_patient_name: "Tên bệnh nhân"
+      col_order_id: "Mã Yêu cầu"
+      col_json: "Dữ liệu Json"
+      col_fail_step: "Bước bị lỗi"
+      col_system: "Hệ thống"
+      col_error_message: "Lỗi"
+      col_try_n_times: "Số lần thử"
+      col_updated_at: "Ngày cập nhật"
+      col_status: "Trạng thái"
+      retry: "Thử lại"
