2473 add vitimes_id

--- a/cdx_vietnam/config/locales/models/cdx_vietnam/patient.en.yml
+++ b/cdx_vietnam/config/locales/models/cdx_vietnam/patient.en.yml
@@ -2,4 +2,5 @@ en:
   activerecord:
     attributes:
       patient:
-        social_security_code: 'SSID'
+        social_security_code: 'CMND'
+        vitimes_id: Vitimes Log ID
