More date format for eTB integration

--- a/cdx_vietnam/config/locales/vi.yml
+++ b/cdx_vietnam/config/locales/vi.yml
@@ -70,6 +70,7 @@ vi:
       short: "%b %d"
       full_date: "%d/%m/%Y"
       etb_short: "%m/%d/%Y"
+      etb_long: "%Y-%m-%dT00:00:00.000Z"
     month_names:
     -
     - Tháng 1
