Rename updated fields ending in _on to _at.

--- a/cdx_core/config/locales/models/microscopy_result.en.yml
+++ b/cdx_core/config/locales/models/microscopy_result.en.yml
@@ -3,9 +3,9 @@ en:
     attributes:
       microscopy_result:
         result_status: 'Status'
-        sample_collected_on: 'Date sample collected'
+        sample_collected_at: 'Date sample collected'
         examined_by: 'Examined by'
-        result_on: 'Date of result'
+        result_at: 'Date of result'
         specimen_type: 'Specimen type'
         serial_number: 'Laboratory serial number(s)'
         appearance: 'Visual appearance'
