--- a/cdx_core/config/locales/models/culture_result.en.yml
+++ b/cdx_core/config/locales/models/culture_result.en.yml
@@ -3,9 +3,9 @@ en:
     attributes:
       culture_result:
         result_status: 'Status'
-        sample_collected_on: 'Date sample collected'
+        sample_collected_at: 'Date sample collected'
         examined_by: 'Examined by'
-        result_on: 'Date of result'
+        result_at: 'Date of result'
         media_used: 'Media used'
         serial_number: 'Laboratory serial number(s)'
         sample_identifier_id: 'Sample ID'
