--- a/cdx_core/config/locales/models/dst_lpa_result.en.yml
+++ b/cdx_core/config/locales/models/dst_lpa_result.en.yml
@@ -3,7 +3,7 @@ en:
     attributes:
       dst_lpa_result:
         result_status: 'Status'
-        sample_collected_on: 'Date sample collected'
+        sample_collected_at: 'Date sample collected'
         media_used: 'Method'
         serial_number: 'Lab serial number'
         results_h: 'Result H'
@@ -19,6 +19,6 @@ en:
         results_other3: 'Result Other'
         results_other4: 'Result Other'
         examined_by: 'Examined by'
-        result_on: 'Date of result'
+        result_at: 'Date of result'
         sample_identifier_id: 'Sample ID'
         feedback_message_id: 'Feedback message'
