--- a/cdx_core/config/locales/views/culture_results.en.yml
+++ b/cdx_core/config/locales/views/culture_results.en.yml
@@ -16,9 +16,9 @@ en:
       audit: 'Culture result has been updated'
       notice: 'Culture result was successfully updated.'
     form:
-      sample_collected_on: 'Sample collected on'
+      sample_collected_at: 'Sample collected on'
       media_used: 'Media used'
       serial_number: 'Serial number'
       test_result: 'Test result'
       examined_by: 'Examined by'
-      result_on: 'Result on'
+      result_at: 'Result on'
