--- a/cdx_vietnam/config/locales/views/culture_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/culture_results.vi.yml
@@ -16,9 +16,9 @@ vi:
       audit: 'Kết quả xét nghiệm nuôi cấy đã được cập nhật'
       notice: 'Kết quả xét nghiệm nuôi cấy đã được cập nhật thành công.'
     form:
-      sample_collected_on: 'Mẫu được thu thập ngày'
+      sample_collected_at: 'Mẫu được thu thập ngày'
       media_used: 'Phương tiện sử dụng'
       serial_number: 'Số seri'
       test_result: 'Kết quả kiểm tra'
       examined_by: 'Kiểm tra bởi'
-      result_on: 'Kết quả ngày'
+      result_at: 'Kết quả ngày'
