--- a/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/dst_lpa_result.vi.yml
@@ -20,3 +20,5 @@ vi:
         results_other4: 'Kết quả khác'
         examined_by: 'Kiểm tra bởi'
         result_at: 'Kết quả ngày'
+        sample_identifier_id: 'Mã số mẫu'
+        feedback_message_id: 'Phản hồi'
