--- a/cdx_vietnam/config/locales/models/microscopy_result.vi.yml
+++ b/cdx_vietnam/config/locales/models/microscopy_result.vi.yml
@@ -10,3 +10,5 @@ vi:
         serial_number: 'Số seri phòng thí nghiệm'
         appearance: 'Hình ảnh xuất hiện'
         test_result: 'Kết quả'
+        sample_identifier_id: 'Mã số mẫu'
+        feedback_message_id: 'Phản hồi'
