--- a/cdx_vietnam/config/locales/select.vi.yml
+++ b/cdx_vietnam/config/locales/select.vi.yml
@@ -104,12 +104,12 @@ vi:
         relapsed: 'Điều trị tái phát Aft.'
         loss: 'Mất theo dõi'
         other: 'Các lần điều trị trước'
-        failcati: 'Failed Cat I'
-        failcatii: 'Failed Cat II'
-        noncon: 'Non-converters after 2 or 3 months of Cat I or Cat II treatment'
-        relepsecat: 'Relapse of Cat I or/and Cat II'
-        retreatcat: 'Retreatment after lost to follow up of Cat I or/and Cat II'
-        tbmdr: 'TB cases or TB suspects who have contacts with MDR-TB index cases'
+        failcati: 'Điều trị Cat I thất bại'
+        failcatii: 'Điều trị Cat II thất bại'
+        noncon: 'Không chuyển đổi sau 2-3 tháng điều trị Cat I hoặc Cat II'
+        relepsecat: 'Tái phát Cat I hoặc/và Cat II'
+        retreatcat: 'Điều trị sau khi mất dấu theo dõi Cat I hoặc/và Cat II'
+        tbmdr: 'Nhiễm lao hoặc nghi ngờ nhiễm lao mà có liên quan tới MDR-TB'
       treatment_outcome:
         cured: 'Chữa khỏi'
         completed: 'Hoàn thành điều trị'
