addition of approvals header - change of styling in some areas - additiion of labels fot VN episodes

--- a/cdx_vietnam/config/locales/select.vi.yml
+++ b/cdx_vietnam/config/locales/select.vi.yml
@@ -121,10 +121,11 @@ vi:
         in_error: 'Tập đã được nêu trong lỗi'
         other: 'Khác'
       drug_resistance:
-        mono: 'Đơn kháng thuốc'
-        poly: 'Kháng nhiều hơn 1 loại thuốc'
-        multi: 'Đa kháng thuốc'
-        extensive: 'Siêu kháng thuốc'
-        rif: 'Kháng thuốc'
-        prexdr: 'Pre XDR'
-        unknown: 'Không rõ'
+        mono: 'Monoresistance without Rif Same so no action'
+        poly: 'Polydrug resistance without Rif Same so no action'
+        multi: 'Multidrug resistance Same so no action'
+        extensive: 'Extensive drug resistance add to CDP dropdown'
+        rif: 'Rifampicin resistance Same so no action'
+        prexdr: 'Pre XDR add to CDP dropdown'
+        etbval: 'Etb Values Action'
+        unknown: 'Unknown'
