--- a/cdx_vietnam/config/locales/select.en.yml
+++ b/cdx_vietnam/config/locales/select.en.yml
@@ -9,3 +9,12 @@ en:
         relepsecat: 'Relapse of Cat I or/and Cat II'
         retreatcat: 'Re-treatment after lost to follow up of Cat I or/and Cat II'
         tbmdr: 'TB cases or TB suspects who have contacts with MDR-TB index cases'
+      drug_resistance:
+        mono: 'Monoresistance without Rif Same so no action'
+        poly: 'Polydrug resistance without Rif Same so no action'
+        multi: 'Multidrug resistance Same so no action'
+        extensive: 'Extensive drug resistance add to CDP dropdown'
+        rif: 'Rifampicin resistance Same so no action'
+        prexdr: 'Pre XDR add to CDP dropdown'
+        etbval: 'Etb Values Action'
+        unknown: 'Unknown'
